--- a/NetflixClone/package.json
+++ b/NetflixClone/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"sass --watch src/sass/styles.sass:src/css/styles.css\"",
+    "dev": "concurrently \"vite --host\" \"sass --watch src/sass/styles.sass:src/css/styles.css\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
