--- a/NetflixClone/package.json
+++ b/NetflixClone/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-multi-carousel": "^2.8.4",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0"
   },
